# secure-aggregation

./: .gitignore  .gitmodules  Cargo.toml  ClientOutput  PackedSecretSharing.cpp  PackedSecretSharing.hpp  README.md  ServerOutput  killall.sh  runall.sh  runclients.sh  secure-aggregation  t1010  t102  t108  t22  t410  t42  t610  t64  t66  t84  timed_100_1000.txt  timed_100_200.txt  timed_100_400.txt  timed_100_600.txt  timed_100_800.txt  timed_20_1000.txt  timed_20_200.txt  timed_20_400.txt  timed_20_600.txt  timed_20_800.txt  timed_40_1000.txt  timed_40_200.txt  timed_40_400.txt  timed_40_600.txt  timed_40_800.txt  timed_60_1000.txt  timed_60_200.txt  timed_60_400.txt  (+7 more)
NTT/: BenchResult.txt  fieldparameters.txt  parameters.cpp  sample.txt
NTT/NTT/: Cargo.toml
NTT/NTT/benches/: benchBigUint.rs  benchRadix3.rs  benchU128.rs  benchU64.rs  benchmark.rs
NTT/NTT/src/: U128.rs  U64.rs  bigUint.rs  lib.rs  main.rs  sample2.txt
NTT/u64-impl/src/: main.rs
NTT/u64_impl/: Cargo.toml  outfile.txt  sample1.txt  sample2.txt
NTT/u64_impl/benches/: benchBigUint.rs  benchU128.rs  benchmark.rs
NTT/u64_impl/src/: U128.rs  U64.rs  bigInt_wrapper.rs  lib.rs  main.rs  sample1.txt
Python Examples/: Schemes.ipynb
client/: Cargo.toml  run.sh
client/src/: lib.rs  lib_old.rs  main.rs  save.rs  sockets.rs  util.rs
client/src copy/: lib.rs  main.rs  sockets.rs
output/: gpu  gpu_data.py  process_time_data.ipynb  t104  t106  t210  t24  t26  t28  t44  t46  t48  t62  t68  t810  t82  t86  t88  time_100_1000.txt  time_100_200.txt  time_100_400.txt  timed_100_1000.txt  timed_100_200.txt  timed_100_600.txt  timed_100_800.txt  timed_20_400.txt  timed_20_600.txt  timed_20_800.txt  timed_40_1000.txt  timed_40_200.txt  timed_40_400.txt  timed_40_600.txt  timed_60_1000.txt  timed_60_200.txt  timed_60_400.txt  timed_60_600.txt  timed_60_800.txt  timed_80_200.txt  timed_80_600.txt  timed_80_800.txt
output/.ipynb_checkpoints/: process_time_data-checkpoint.ipynb
output/EC-result/: ec1010  ec106  ec108  ec610  ec66  ec68  ec810  ec86  ec88
output/two-AWS-result/: 100c100000i
packed_secret_sharing/: Cargo.toml
packed_secret_sharing/benches/: benchNTT.rs  benchPacked.rs  benchmark.rs
packed_secret_sharing/src/: lib.rs  main.rs  ntt.rs  packed.rs  packed_ss.rs
pss/: Cargo.toml
pss/benches/: benchmark.rs
pss/src/: lib.rs  main.rs  ntt.rs
router/: Cargo.toml
router/src/: client.rs  lib.rs  server.rs  types.rs
server/: Cargo.toml  run.sh  to_impl_EC.rs
server/src/: controller.rs  lib.rs  lib_old.rs  main.rs  main_old.rs  param.rs  save.rs  sockets.rs  tests.rs  worker.rs
server/src copy/: lib.rs  main.rs  param.rs  sockets.rs  worker.rs
u64-impl/: Cargo.toml
