[package]
name = "client"
version = "0.1.0"
authors = ["CeciliaZ030 <CeciliaZ030@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zmq]
version = "0.9"

[dependencies.rand_core]
version = "0.5.1"
features = ["getrandom"]

[dependencies.aes-gcm]
version = "0.7.0"

[dependencies.p256]
version = "0.5.2"
features = ["ecdh", "ecdsa"]

[dependencies.pss]
path = "../pss"

[dependencies.signature]
version = "1.2.2"