[package]
name = "packed_secret_sharing"
version = "0.1.0"
authors = ["CeciliaZ030 <CeciliaZ030@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.num-traits]
version = "0.2.4"
default-features = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false