[package]
name = "server"
version = "0.1.0"
authors = ["CeciliaZ030 <CeciliaZ030@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zmq]
version = "0.9"

#[dependencies.ecdsa]
#version = "0.8.5"
#features = ["verify", "dev"]

[dependencies.p256]
version = "0.5.2"
features = ["digest","ecdsa"]

[dependencies.signature]
version = "1.2.2"

[dependencies.rand_core]
version = "0.5.1"
features = ["getrandom"]

[dependencies.polynomials]
version = "0.2.4"

[dependencies.pss]
path = "../pss"
